# NeuroVest

./: .env.example  .gitignore  README.md  SPY.csv  analyze_signals.py  backfill_predictions.py  backtest.py  backtest_module.py  config.py  crontab.txt  data_utils.py  download_spy_data.py  evaluate.py  external_signals.py  fetch_spy.py  fetch_spy_history.py  generate_labels.py  indicators_shim.py  live_loop.py  main.py  market_crash_model.pkl  predict.py  pyproject.toml  requirements.txt  run_all.py  run_daily_pipeline.py  select_top_signals.py  signal_logger.py  sweep_optimizer.py  sweep_runner.py  threshold_sweep.py  todo.md  top_config_runner.py  trade_executor.py  trade_simulator.py  train.py  train_from_labels.py  update_spy_data.py  utils.py  viz.py  (+3 more)
configs/: best_thresholds.json
data/: DXY.csv  HYG.csv  LQD.csv  SPY.csv  TNX.csv  UUP.csv  bootstrap_downloads.py  spy_daily.csv
data/etfs/: XLB.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv
data_cache/: fred_CPIAUCSL.csv  fred_DFF.csv  fred_INDPRO.csv  fred_T10Y2Y.csv  fred_UMCSENT.csv  fred_UNRATE.csv  fred_VIXCLS.csv  news_sent.csv  reddit_sent.csv
scripts/: refresh_prices.sh  unify_prices.py
